--- a/Feature_one/templates/index.html
+++ b/Feature_one/templates/index.html
@@ -4,9 +4,10 @@
     <title>Welcome</title>
   </head>
   <body>
-    <h1>Welcome to the cars database</h1>
+    <h1>Welcome to the cars list</h1>
     {% for Car in Car%}
-      <h4>The user {{Car.user_id}} has the car id: {{Car.id}}, Vin number: {{Car.car_vin}}, Model:{{Car.model}}, Make: {{Car.make}}, Color: {{Car.color}}
+      <h4>The user {{Car.user_id}} has the car id: {{Car.id}}, Vin number: {{Car.car_vin}},
+        Model:{{Car.model}}, Make: {{Car.make}}, Color: {{Car.color}}
       </h4>
 
     {%endfor%}
